Include codegen (otherwise get warnings) and set biased locking startup delay to zero in scripts